--- a/content/data/_config.json
+++ b/content/data/_config.json
@@ -1,10 +1,10 @@
 {
   "site": {
-    "description": "",
-    "domain_without_trailing_slash": "www.alanwsmith.com",
+    "description": "enter a url, launch a window",
+    "domain_without_trailing_slash": "popup.alanwsmith.com",
     "favicon_root": "/favicons",
-    "github_url": "https://github.com/alanwsmith/",
+    "github_url": "https://github.com/alanwsmith/popup.alanwsmith.com",
     "og_image_rel_path": "/images/og-image.jpg",
-    "title": ""
+    "title": "popup launcher"
   }
 }
